--- a/dev/styles.css
+++ b/dev/styles.css
@@ -1,8 +1,32 @@
 @import url("./fonts/geist.css");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+/* HTML Defaults */
+body {
+  font-family: Geist, Helvetica, sans-serif;
+  background-color: var(--color-zinc-950);
+  color: var(--foreground);
+}
+
+/* -- Tailwind Defaults (Removed in V4, so manually set) -- */
+
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
+
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--border, currentColor);
+  }
+}
 
 body {
   margin: 0;
@@ -15,4 +39,351 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+/** Theming */
+@layer base {
+  :root {
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.27 0 0);
+    --card: oklch(1 0 0);
+    --card-foreground: oklch(0.27 0 0);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.27 0 0);
+    --primary: oklch(62.3% 0.214 259.815);
+    --primary-foreground: white;
+    --secondary: oklch(0.97 0 264.54);
+    --secondary-foreground: oklch(0.45 0.03 256.8);
+    --muted: oklch(0.98 0 247.84);
+    --muted-foreground: oklch(0.55 0.02 264.36);
+    --accent: oklch(95% 0.05 259.815);
+    --accent-foreground: var(--primary);
+    --destructive: oklch(0.64 0.21 25.33);
+    --destructive-foreground: oklch(1 0 0);
+    --border: oklch(0.93 0.01 264.53);
+    --input: oklch(0.93 0.01 264.53);
+    --ring: var(--primary);
+    --chart-1: oklch(0.77 0.16 70.08);
+    --chart-2: oklch(0.67 0.16 58.32);
+    --chart-3: oklch(0.56 0.15 49);
+    --chart-4: oklch(0.47 0.12 46.2);
+    --chart-5: oklch(0.41 0.11 45.9);
+    --radius: 0.625rem;
+    --shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+    --shadow-sm: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
+    --shadow: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
+    --shadow-md: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 2px 4px -2px hsl(0 0% 0% / 0.1);
+    --shadow-lg: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 4px 6px -2px hsl(0 0% 0% / 0.1);
+    --shadow-xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 8px 10px -2px hsl(0 0% 0% / 0.1);
+    --shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
+
+    /* The foregrounds suck for me. */
+    --success: oklch(65% 0.15 160);
+    --success-foreground: oklch(0.2 0.05 160);
+    --warning: oklch(85% 0.15 85);
+    --warning-foreground: #a16207;
+    --error: oklch(65% 0.18 25);
+    --error-foreground: oklch(1 0 0);
+    --info: oklch(0.665 0.127 251);
+    --info-foreground: oklch(1 0 0);
+
+    /* Sidebars */
+    --sidebar: oklch(0.985 0 0);
+    --sidebar-foreground: oklch(0.145 0 0);
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(0.708 0 0);
+  }
+
+  .dark {
+    --background: oklch(0.2 0 0);
+    --foreground: oklch(0.92 0 0);
+    --card: oklch(0.27 0 0);
+    --card-foreground: oklch(0.92 0 0);
+    --popover: oklch(0.27 0 0);
+    --popover-foreground: oklch(0.92 0 0);
+    --primary: oklch(62.3% 0.214 259.815);
+    --primary-foreground: white;
+    --secondary: oklch(0.27 0 0);
+    --secondary-foreground: oklch(0.92 0 0);
+    --muted: oklch(0.27 0 0);
+    --muted-foreground: oklch(0.72 0 0);
+    --accent: oklch(95% 0.05 259.815);
+    --accent-foreground: var(--primary);
+    --destructive: oklch(0.64 0.21 25.33);
+    --destructive-foreground: oklch(1 0 0);
+    --border: oklch(0.37 0 0);
+    --input: oklch(0.37 0 0);
+    --ring: var(--primary);
+    --chart-1: oklch(0.84 0.16 84.43);
+    --chart-2: oklch(0.67 0.16 58.32);
+    --chart-3: oklch(0.47 0.12 46.2);
+    --chart-4: oklch(0.56 0.15 49);
+    --chart-5: oklch(0.47 0.12 46.2);
+
+    --font-sans: Inter, sans-serif;
+    --font-serif: Source Serif 4, serif;
+    --font-mono: JetBrains Mono, monospace;
+    --radius: 0.625rem;
+    --shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+    --shadow-sm: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
+    --shadow: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
+    --shadow-md: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 2px 4px -2px hsl(0 0% 0% / 0.1);
+    --shadow-lg: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 4px 6px -2px hsl(0 0% 0% / 0.1);
+    --shadow-xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 8px 10px -2px hsl(0 0% 0% / 0.1);
+    --shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
+
+    /* Sidebars */
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.439 0 0);
+  }
+}
+
+@theme {
+  --font-manrope: "Manrope", "sans-serif";
+  --default-border-width: 0.5px;
+  /* --font-sans: Inter, sans-serif; */
+  /* --font-serif: Source Serif 4, serif; */
+  /* --font-mono: JetBrains Mono, monospace; */
+
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-info: var(--info);
+  --color-info-foreground: var(--info-foreground);
+  --color-success: var(--success);
+  --color-success-foreground: var(--success-foreground);
+  --color-warning: var(--warning);
+  --color-warning-foreground: var(--warning-foreground);
+  --color-error: var(--error);
+  --color-error-foreground: var(--error-foreground);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  /* --- Animations --- */
+  --animate-fadeIn: fadeIn 200ms ease-out forwards;
+  --animate-fadeOut: fadeOut 200ms ease-in forwards;
+  --animate-flyUp: flyUp 200ms ease-out forwards;
+  --animate-flyUpExit: flyUpExit 200ms ease-in forwards;
+
+  --animate-flyUpAndScale: flyUpAndScale 350ms var(--easings-emphasized-in) forwards;
+  --animate-flyUpAndScaleExit: flyUpAndScaleExit 200ms var(--easings-emphasized-out) forwards;
+
+  --animate-flyRight: flyRight 200ms ease-out forwards;
+  --animate-flyRightExit: flyRightExit 200ms ease-in forwards;
+
+  --animate-flyLeft: flyLeft 200ms ease-out forwards;
+  --animate-flyLeftExit: flyLeftExit 200ms ease-in forwards;
+
+  --easings-emphasized-in: cubic-bezier(0.05, 0.7, 0.1, 1);
+  --easings-emphasized-out: cubic-bezier(0.3, 0, 0.8, 0.15);
+
+  --animate-accordion-down: accordion-down 200ms ease-out forwards;
+  --animate-accordion-up: accordion-up 200ms ease-in-out forwards;
+
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--kb-accordion-content-height);
+    }
+  }
+
+  @keyframes accordion-up {
+    from {
+      height: var(--kb-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+
+  @keyframes flyUp {
+    from {
+      opacity: 0;
+      transform: translate(0px, 15px);
+    }
+    to {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+  }
+
+  @keyframes flyUpAndScale {
+    from {
+      opacity: 0;
+      transform: translate(0px, 100px) scale(0.97);
+    }
+    to {
+      opacity: 1;
+      transform: translate(0px, 0px) scale(1);
+    }
+  }
+
+  @keyframes flyUpAndScaleExit {
+    from {
+      opacity: 1;
+      transform: translate(0px, 0px) scale(1);
+    }
+    to {
+      opacity: 0;
+      transform: translate(0px, 50px) scale(0.97);
+    }
+  }
+
+  @keyframes flyUpExit {
+    from {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+    to {
+      opacity: 0;
+      transform: translate(0px, 15px);
+    }
+  }
+
+  @keyframes flyRight {
+    from {
+      opacity: 0;
+      transform: translate(-15px, 0px);
+    }
+    to {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+  }
+
+  @keyframes flyRightExit {
+    from {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+    to {
+      opacity: 0;
+      transform: translate(-15px, 0px);
+    }
+  }
+
+  @keyframes flyLeft {
+    from {
+      opacity: 0;
+      transform: translate(15px, 0px);
+    }
+    to {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+  }
+
+  @keyframes flyLeftExit {
+    from {
+      opacity: 1;
+      transform: translate(0px, 0px);
+    }
+    to {
+      opacity: 0;
+      transform: translate(15px, 0px);
+    }
+  }
+}
+
+/* https://github.com/tailwindlabs/tailwindcss-intellisense/issues/227#issuecomment-1221083129 */
+@utility no-scrollbar {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/** Custom scrollbar that fits darkmode and lightmode */
+@utility scrollbar-thin {
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-border);
+    border-radius: 9999px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
 }
